# ParkingApp

./: pyproject.toml
app/src/ocr/: anpr.py  ocr_license_plate.py
app/src/repository/: users.py
app/src/routes/: parking.py  users.py
